added some fake json data

--- a/public/template/index.hbs
+++ b/public/template/index.hbs
@@ -1,1 +1,8 @@
-This is some content.
+<div class="row">
+  <div class="span9">This is some content.</div>
+
+  <div class="span3">
+    <div>This is a collection of json data</div>
+    {{view view.listView}}
+  </div>
+</div>
