--- a/public/template/application.hbs
+++ b/public/template/application.hbs
@@ -1,3 +1,6 @@
-<div class="container">
-  <div id="content">{{outlet}}</div>
+<div class="container-fluid">
+  <div class="row-fluid">
+    <div class="span2"><nav>{{outlet nav}}</nav></div>
+    <div class="span10">{{outlet}}</span>
+  </div>
 </div>
