--- a/public/template/application.hbs
+++ b/public/template/application.hbs
@@ -1,6 +1,12 @@
+<header>
+  <div class="hero-unit">
+    <h1>Ember AMD</h1>
+    <p>Don't tell Tom Dale.</p>
+  </div>
+</header>
 <div class="container-fluid">
   <div class="row-fluid">
     <div class="span2"><nav>{{outlet nav}}</nav></div>
-    <div class="span10">{{outlet}}</span>
+    <div class="span10"><article>{{outlet}}</article></span>
   </div>
 </div>
