--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,9 @@
 body {
   font-size: 16px;
+  background-color: rgb(250, 250, 250);
 }
+.hero-unit {
+  background-color: rgb(255, 255, 255);
 h3 {
   font-size: 26px;
 }
