--- a/template/tricky_bits.hbs
+++ b/template/tricky_bits.hbs
@@ -7,10 +7,10 @@
   <span class="s1">&#39;hbs!tricky_bits&#39;</span>
 <span class="p">],</span>
 <span class="kd">function</span><span class="p">(</span><span class="nx">Ember</span><span class="p">)</span> <span class="p">{</span>
-  <span class="kd">var</span> <span class="nx">OtherView</span> <span class="o">=</span> <span class="nx">Ember</span><span class="p">.</span><span class="nx">View</span><span class="p">.</span><span class="nx">extend</span><span class="p">({</span>
+  <span class="kd">var</span> <span class="nx">TrickyBitsView</span> <span class="o">=</span> <span class="nx">Ember</span><span class="p">.</span><span class="nx">View</span><span class="p">.</span><span class="nx">extend</span><span class="p">({</span>
     <span class="nx">templateName</span><span class="o">:</span> <span class="s1">&#39;tricky_bits&#39;</span>
   <span class="p">});</span>
-  <span class="k">return</span> <span class="nx">OtherView</span><span class="p">;</span>
+  <span class="k">return</span> <span class="nx">TrickyBitsView</span><span class="p">;</span>
 <span class="p">});</span>
 </pre></div>
 
