added notes about grunt upgrade

--- a/public/template/index.hbs
+++ b/public/template/index.hbs
@@ -7,8 +7,9 @@
 
   <h3>Building with Grunt</h3>
 
+  <p>As of version 0.3.0, Grunt 0.4.x is used to build the project. This means that you'll need to install <code>grunt-cli</code> globally. See <a target="_blank" href="http://gruntjs.com/getting-started">http://gruntjs.com/getting-started</a> for more details.</p>
 <div class="highlight"><pre><span class="nv"><span class="o">$</span> </span><span class="nb">cd </span>ember-amd-starter
-<span class="nv"><span class="o">$</span> </span>node_modules/.bin/grunt
+<span class="nv"><span class="o">$</span> </span>grunt
 Running <span class="s2">&quot;lint:all&quot;</span> (lint) task
 Lint free.
 
