--- a/public/template/tricky_bits.hbs
+++ b/public/template/tricky_bits.hbs
@@ -17,41 +17,14 @@
   <p>Behind the scenes, the <code>hbs</code> plugin fetches your template file, compiles it with <code>Ember.Handlebars</code> and adds a reference to the compiled template to <code>Ember.TEMPLATES</code>. Instances of <code>Ember.View</code> can then look up your compiled template by filename using the <code>templateName</code> property.</p>
 
   <h3>Tricky Bit #2: Grunt and Jasmine</h3>
-  <p><a href="http://pivotal.github.com/jasmine">Jasmine</a> is a great way to test your Javascript, but using Jasmine with your AMD app isn't completely straight-forward. I've modified <a href="https://github.com/jasmine-contrib/grunt-jasmine-runner">grunt-jasmine-runner</a> to work correctly with AMD apps, and configured <code>grunt.js</code> to run Jasmine specs from the <code>test/spec</code> folder. Accessing components from your specs is super-easy:</p>
-
-<div class="highlight"><pre><span class="nx">define</span><span class="p">([</span>
-  <span class="s1">&#39;ember&#39;</span><span class="p">,</span>
-  <span class="s1">&#39;jquery&#39;</span><span class="p">,</span>
-  <span class="s1">&#39;IndexView&#39;</span><span class="p">,</span>
-  <span class="s1">&#39;hbs!template/application&#39;</span>
-<span class="p">],</span>
-<span class="kd">function</span><span class="p">(</span><span class="nx">Ember</span><span class="p">,</span> <span class="nx">$</span><span class="p">,</span> <span class="nx">IndexView</span><span class="p">,</span> <span class="nx">applicationTemplate</span><span class="p">)</span> <span class="p">{</span>
-  <span class="nx">describe</span><span class="p">(</span><span class="s2">&quot;hbs!&quot;</span><span class="p">,</span> <span class="kd">function</span><span class="p">()</span> <span class="p">{</span>
-    <span class="nx">it</span><span class="p">(</span><span class="s2">&quot;should be able to fetch and compile templates&quot;</span><span class="p">,</span> <span class="kd">function</span><span class="p">()</span> <span class="p">{</span>
-      <span class="nx">expect</span><span class="p">(</span><span class="nx">applicationTemplate</span><span class="p">).</span><span class="nx">toBeDefined</span><span class="p">();</span>
-      <span class="nx">expect</span><span class="p">(</span><span class="k">typeof</span> <span class="nx">applicationTemplate</span><span class="p">).</span><span class="nx">toEqual</span><span class="p">(</span><span class="s1">&#39;function&#39;</span><span class="p">);</span>
-    <span class="p">});</span>
-  <span class="p">});</span>
-
-  <span class="kd">var</span> <span class="nx">$container</span> <span class="o">=</span> <span class="nx">$</span><span class="p">(</span><span class="nb">document</span><span class="p">.</span><span class="nx">body</span><span class="p">).</span><span class="nx">append</span><span class="p">(</span><span class="s1">&#39;&lt;div&gt;&#39;</span><span class="p">);</span>
-  <span class="kd">var</span> <span class="nx">indexView</span><span class="p">;</span>
-
-  <span class="nx">describe</span><span class="p">(</span><span class="s2">&quot;IndexView&quot;</span><span class="p">,</span> <span class="kd">function</span><span class="p">()</span> <span class="p">{</span>
-    <span class="nx">beforeEach</span><span class="p">(</span><span class="kd">function</span><span class="p">()</span> <span class="p">{</span>
-      <span class="nx">indexView</span> <span class="o">=</span> <span class="nx">IndexView</span><span class="p">.</span><span class="nx">create</span><span class="p">();</span>
-      <span class="nx">indexView</span><span class="p">.</span><span class="nx">appendTo</span><span class="p">(</span><span class="nx">$container</span><span class="p">);</span>
-    <span class="p">});</span>
-
-    <span class="nx">afterEach</span><span class="p">(</span><span class="kd">function</span><span class="p">()</span> <span class="p">{</span>
-      <span class="nx">indexView</span><span class="p">.</span><span class="nx">remove</span><span class="p">();</span>
-      <span class="nx">$container</span><span class="p">.</span><span class="nx">html</span><span class="p">(</span><span class="s1">&#39;&#39;</span><span class="p">);</span>
-    <span class="p">});</span>
-
-    <span class="nx">it</span><span class="p">(</span><span class="s2">&quot;should successfully render&quot;</span><span class="p">,</span> <span class="kd">function</span><span class="p">()</span> <span class="p">{</span>
-      <span class="nx">expect</span><span class="p">(</span><span class="nx">$container</span><span class="p">.</span><span class="nx">find</span><span class="p">(</span><span class="s1">&#39;*&#39;</span><span class="p">).</span><span class="nx">length</span><span class="p">).</span><span class="nx">toBeGreaterThan</span><span class="p">(</span><span class="mi">0</span><span class="p">);</span>
-    <span class="p">});</span>
-  <span class="p">});</span>
-<span class="p">});</span>
+  
+  <p>As of version <code>0.3.0</code>, <code>grunt-jasmine-runner</code> has been dropped in favor of <a target="_blank" href="https://github.com/gruntjs/grunt-contrib-jasmine">grunt-contrib-jasmine</a> and <a target="_blank" href="https://github.com/jsoverson/grunt-template-jasmine-requirejs">grunt-template-jasmine-requirejs</a> which has built-in support for <code>require.js</code> apps. Yay. Now all we need is a little bit of config in our <code>Gruntfile</code>:</p>
+<div class="highlight"><pre><span class="nx">jasmine</span><span class="o">:</span> <span class="p">{</span>
+  <span class="nx">src</span><span class="o">:</span> <span class="p">[</span><span class="s1">&#39;public-build/js/App.js&#39;</span><span class="p">],</span>
+  <span class="nx">options</span><span class="o">:</span> <span class="p">{</span>
+    <span class="nx">template</span><span class="o">:</span> <span class="nx">require</span><span class="p">(</span><span class="s1">&#39;grunt-template-jasmine-requirejs&#39;</span><span class="p">),</span>
+    <span class="nx">specs</span><span class="o">:</span> <span class="s1">&#39;test/spec/**/*.js&#39;</span>
+  <span class="p">}</span>
+<span class="p">}</span>
 </pre></div>
-
 </section>
